# linux-steam-integration

./: .gitignore  .gitmodules  Makefile.am  README.md  README.rst  TECHNICAL.md  TODO.md  autogen.sh  configure.ac  meson.build  meson_options.txt  mkgobuildy.sh  mkrelease.sh  test.sh  update_format.sh
.tx/: config
data/: lsi-settings.desktop  lsi-settings.desktop.in  lsi-steam.desktop  meson.build
po/: LINGUAS  POTFILES.in  ar.po  ca.po  ca_ES.po  cs.po  da.po  da_DK.po  de.po  de_CH.po  en_GB.po  eo.po  es.po  es_419.po  es_AR.po  es_ES.po  es_MX.po  es_PE.po  fi.po  fr_FR.po  he.po  hu.po  id_ID.po  it_IT.po  ko.po  ko_KR.po  linux-steam-integration.pot  lt.po  meson.build  nb_NO.po  ne_NP.po  nl_BE.po  nl_NL.po  pl.po  pl_PL.po  pt_BR.po  pt_PT.po  ro_RO.po  ru.po  sv_SE.po  (+2 more)
snapd/: meson.build  pulseaudio
src/: common.h  lsi.c  lsi.h  meson.build  shim.c
src/common/: files.c  files.h  log.c  log.h  meson.build  vdf.c  vdf.h
src/frontend/: main-window.c  main-window.h  main.c  meson.build
src/intercept/: intercept.h  main.c  meson.build  snapd.c  sym.map
src/intercept-emul32/: meson.build
src/lsi/: lsi.c  lsi.h  meson.build
src/nica/: hashmap.c  hashmap.h  inifile.c  inifile.h  util.h
src/redirect/: main.c  meson.build  private.h  profile.c  profile.h  redirect.h  sym.map  unity.c
src/redirect/profiles/: ark.c  project_highrise.c
src/shim/: lsi-exec.c  lsi.c  lsi.h  main.c  meson.build  shim.c  shim.h
