option('with-shim', type : 'combo', choices : ['replacement', 'co-exist', 'none'], value: 'replacement',
       description : 'control how the shim is deployed')
option('with-steam-binary', type: 'string', description: 'Set the path to the Steam binary', value: '/usr/lib/steam/steam')
option('with-frontend', type: 'boolean', description: 'Build the LSI Settings UI', value: false)
option('with-preload-libs', type: 'string', description: 'Colon separated list of libraries required to launch Steam games',
        value: '/usr/\$LIB/libxcb.so.1:/usr/\$LIB/libX11.so.6:/usr/\$LIB/libstdc++.so.6')
option('with-libintercept', type: 'boolean', description: 'Enable libintercept library for controlling Steam linking', value: true)
option('with-libredirect', type: 'boolean', description: 'Enable libredirect library for fine-tuning Steam games', value: true)
option('with-new-libcxx-abi', type: 'boolean', description: 'Enable when using the new libstdc++ ABI', value: false)

option('with-libressl-mode', type: 'combo', choices: ['native', 'shim', 'none'], value: 'none',
        description: 'Control how LibreSSL replacements are performed')
option('with-libressl-suffix', type: 'string', value: '-libressl',
        description: 'Suffix for shim LibreSSL library when using --with-libressl-mode=shim')

option('with-snap-support', type: 'boolean', description: 'Build LSI with explicit support for snapd', value: false)
